--- a/catalog-item.html
+++ b/catalog-item.html
@@ -8,26 +8,28 @@
 		<link href="css/style.css" rel="stylesheet">
 	</head>
 	<body class="inner-page">
-		<header>
+		<header class="main-header">
 			<nav class="main-navigation">
-				<a href="index.html">
-					<img src="img/logo.svg" width="111" height="24" alt="Логотип барбешопа «Бородинский»">
-				</a>
-				<ul class="site-navigation">
-					<li><a href="">Информация</a></li>
-					<li><a href="">Новости</a></li>
-					<li><a href="">Прайс-лист</a></li>
-					<li><a href="">Магазин</a></li>
-					<li><a href="">Контакты</a></li>
-				</ul>
-				<ul class="user-navigation">
-					<li>
-						<a href="">Вход</a>
-					</li>
-				</ul>
+				<div class="container">
+					<a class="main-header-logo" href="index.html">
+						<img src="img/logo.svg" width="111" height="24" alt="Логотип барбешопа «Бородинский»">
+					</a>
+					<ul class="site-navigation">
+						<li><a href="">Информация</a></li>
+						<li><a href="">Новости</a></li>
+						<li><a href="">Прайс-лист</a></li>
+						<li><a href="catalog.html">Магазин</a></li>
+						<li><a href="">Контакты</a></li>
+					</ul>
+					<ul class="user-navigation">
+						<li>
+							<a href="">Вход</a>
+						</li>
+					</ul>
+				</div>
 			</nav>
 		</header>
-		<main>
+		<main class="container">
 			<h1 class="page-title">Набор для путешествий «Baxter of California»</h1>
 			<ul class="breadcrumbs">
 				<li><a href="">Главная</a></li>
@@ -36,65 +38,69 @@
 				<li>Набор для путешествий «Baxter of California»</li>
 			</ul>
 			<!-- Изображения товара вынесены в отдельную секцию -->
-			<section>
-				<h2 class="visually-hidden">Изображения товара</h2>
-				<!-- Главная картинка завернута в p так как является визуальным описанием товара -->
-				<p class="product-photo-full">
-					<img src="img/product-big.jpg" width="460" height="498" alt="Фото всего набора">
-				</p>
-				<ul class="product-photo-preview">
-					<li><img src="img/product-sm1.jpg" width="140" height="149" alt="Фото в анфас"></li>
-					<li><img src="img/product-sm2.jpg" width="140" height="149" alt="Фото отдельной части"></li>
-					<li><img src="img/product-sm3.jpg" width="140" height="149" alt="Фото всего набора"></li>
-				</ul>
-			</section>
-			<section class="product-info">
-				<h2 class="visually-hidden">Описание товара</h2>
-					<!-- Наличие и артикул завернуты в разные p на скринкасте -->
-					<p>Есть в наличии</p>
-					<p class="product-article">Артикул: dexter-ae</p>
-					<p>
-						Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.
+			<div class="catalog-columns">
+				<section class="product-photo">
+					<h2 class="visually-hidden">Изображения товара</h2>
+					<!-- Главная картинка завернута в p так как является визуальным описанием товара -->
+					<p class="product-photo-full">
+						<img src="img/product-big.jpg" width="460" height="498" alt="Фото всего набора">
 					</p>
-					<p>		
-						<b class="price">2 900 &#8381;</b>
-						<a class="button" href="">Купить</a>
-					</p>
-					<h3>В набор входят:</h3>
-					<ul>
-						<li>Средство для умывания (50 мл)</li>
-						<li>Увлажняющий крем (50 мл)</li>
-						<li>Крем для бритья (50 мл)</li>
-						<li>Крем после бритья, шампунь (50 мл)</li>
-						<li>Удобная кожаная косметичка</li>
-					</ul>		
-			</section>
+					<ul class="product-photo-preview">
+						<li><img src="img/product-sm1.jpg" width="140" height="149" alt="Фото в анфас"></li>
+						<li><img src="img/product-sm2.jpg" width="140" height="149" alt="Фото отдельной части"></li>
+						<li><img src="img/product-sm3.jpg" width="140" height="149" alt="Фото всего набора"></li>
+					</ul>
+				</section>
+				<section class="product-info">
+					<h2 class="visually-hidden">Описание товара</h2>
+						<!-- Наличие и артикул завернуты в разные p на скринкасте -->
+						<p>Есть в наличии</p>
+						<p class="product-article">Артикул: dexter-ae</p>
+						<p>
+							Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.
+						</p>
+						<p>		
+							<b class="price">2 900 &#8381;</b>
+							<a class="button" href="">Купить</a>
+						</p>
+						<h3>В набор входят:</h3>
+						<ul>
+							<li>Средство для умывания (50 мл)</li>
+							<li>Увлажняющий крем (50 мл)</li>
+							<li>Крем для бритья (50 мл)</li>
+							<li>Крем после бритья, шампунь (50 мл)</li>
+							<li>Удобная кожаная косметичка</li>
+						</ul>		
+				</section>
+			</div>
 		</main>
 		<footer class="main-footer">
-			<p class="footer-contacts">
-				Барбершоп «Бородинский»<br>
-				Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
-				<a href="">Как нас найти?</a><br>
-				Телефон: +7 (495) 666-02-66
-			</p>
-			<div class="footer-social">
-				<p>Давайте дружить!</p>
-				<ul>
-					<li>
-						<a class="social-button" href="">Вконтакте</a>
-					</li>
-					<li>
-						<a class="social-button" href="">Фейсбук</a>
-					</li>
-					<li>
-						<a class="social-button" href="">Инстаграм</a>
-					</li>
-				</ul>
+			<div class="container">
+				<p class="footer-contacts">
+					Барбершоп «Бородинский»<br>
+					Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
+					<a href="">Как нас найти?</a><br>
+					Телефон: +7 (495) 666-02-66
+				</p>
+				<div class="footer-social">
+					<p>Давайте дружить!</p>
+					<ul>
+						<li>
+							<a class="social-button" href="">Вконтакте</a>
+						</li>
+						<li>
+							<a class="social-button" href="">Фейсбук</a>
+						</li>
+						<li>
+							<a class="social-button" href="">Инстаграм</a>
+						</li>
+					</ul>
+				</div>
+				<p class="footer-copyright">
+					Разработано:
+					<a class="button" href="https://htmlacademy.ru">HTML Academy</a>
+				</p>
 			</div>
-			<p class="footer-copyright">
-				Разработано:
-				<a class="button" href="https://htmlacademy.ru">HTML Academy</a>
-			</p>
 		</footer>
 	</body>
 </html>
