--- a/catalog.html
+++ b/catalog.html
@@ -8,211 +8,217 @@
 		<link href="css/style.css" rel="stylesheet">
 	</head>
 	<body class="inner-page">
-		<header>
+		<header class="main-header">
 			<nav class="main-navigation">
-				<a href="index.html">
-					<img src="img/logo.svg" width="111" height="24" alt="Логотип барбешопа «Бородинский»">
-				</a>
-				<ul class="site-navigation">
-					<li><a href="">Информация</a></li>
-					<li><a href="">Новости</a></li>
-					<li><a href="">Прайс-лист</a></li>
-					<li><a href="">Магазин</a></li>
-					<li><a href="">Контакты</a></li>
-				</ul>
-				<ul class="user-navigation">
-					<li>
-						<a href="">Вход</a>
-					</li>
-				</ul>
+				<div class="container">
+					<a class="main-header-logo" href="index.html">
+						<img src="img/logo.svg" width="111" height="24" alt="Логотип барбешопа «Бородинский»">
+					</a>
+					<ul class="site-navigation">
+						<li><a href="">Информация</a></li>
+						<li><a href="">Новости</a></li>
+						<li><a href="">Прайс-лист</a></li>
+						<li><a href="catalog.html">Магазин</a></li>
+						<li><a href="">Контакты</a></li>
+					</ul>
+					<ul class="user-navigation">
+						<li>
+							<a href="">Вход</a>
+						</li>
+					</ul>
+				</div>
 			</nav>
 		</header>
-		<main>
+		<main class="container">
 			<h1 class="page-title">Средства для ухода</h1>
 			<ul class="breadcrumbs">
 				<li><a href="index.html">Главная</a></li>
 				<li><a href="">Магазин</a></li>
 				<li>Средства для ухода</li>
 			</ul>
-			<section>
-				<h2 class="visually-hidden">Фильтр товаров</h2>
-				<form class="filter" action="" method="get">
-					<fieldset>
-						<legend>Производители:</legend>
-						<ul>
-							<li>
-								<input id="filter-baxter-of-california"  type="checkbox" name="baxter-of-california" checked>
-								<label for="filter-baxter-of-california">Baxter of California</label>
-							</li>
-							<li>
-								<input id="filter-mr-natty"  type="checkbox" name="mr-natty" disabled>
-								<label for="filter-mr-natty">Mr Natty</label>
-							</li>
-							<li>
-								<input id="filter-suavecito"  type="checkbox" name="suavecito" checked>
-								<label for="filter-suavecito">Suavecito</label>
-							</li>
-							<li>
-								<input id="filter-malin-goetz"  type="checkbox" name="malin-goetz">
-								<label for="filter-malin-goetz">Malin+Goetz</label>
-							</li>
-							<li>
-								<input id="filter-murrays"  type="checkbox" name="murrays">
-								<label for="filter-murrays">Murray's</label>
-							</li>
-							<li>
-								<input id="filter-american-crew"  type="checkbox" name="american-crew" checked>
-								<label for="filter-american-crew">American Crew</label>
-							</li>
-						</ul>
-					</fieldset>
-					<fieldset>
-						<legend>Группы товаров:</legend>
-						<ul>
-							<li>
-								<input id="filter-shave" type="radio" name="product-group" value="shaving">
-								<label for="filter-shave">Бритвенные принадлежности</label>
-							</li>
-							<li>
-								<input id="filter-care" type="radio" name="product-group" value="hair-care" checked>
-								<label for="filter-care">Средства для ухода</label>
-							</li>
-							<li>
-								<input id="filter-accessories" type="radio" name="product-group" value="accessories">
-								<label for="filter-accessories">Бритвенные принадлежности</label>
-							</li>
-						</ul>
-					</fieldset>
-					<button type="submit">Показать</button>
-				</form>
-			</section>
-			<section>
-				<h2 class="visually-hidden">Список средств для ухода</h2>
-				<ul class="catalog-list">
-					<li>
-						<a class="link" href="catalog-item.html">
-							<h3>
-								<span>Набор для путешествий</span>
-								<span>«Baxter of California»</span>
-							</h3>
-							<p>
-								<img src="img/product1.jpg" width="220" height="165" alt="Набор для путешествий «Baxter of California»">
+			<div class="catalog-columns">
+				<section class="filter">
+					<h2 class="visually-hidden">Фильтр товаров</h2>
+					<form class="filter-form" action="" method="get">
+						<fieldset>
+							<legend>Производители:</legend>
+							<ul>
+								<li>
+									<input id="filter-baxter-of-california"  type="checkbox" name="baxter-of-california" checked>
+									<label for="filter-baxter-of-california">Baxter of California</label>
+								</li>
+								<li>
+									<input id="filter-mr-natty"  type="checkbox" name="mr-natty" disabled>
+									<label for="filter-mr-natty">Mr Natty</label>
+								</li>
+								<li>
+									<input id="filter-suavecito"  type="checkbox" name="suavecito" checked>
+									<label for="filter-suavecito">Suavecito</label>
+								</li>
+								<li>
+									<input id="filter-malin-goetz"  type="checkbox" name="malin-goetz">
+									<label for="filter-malin-goetz">Malin+Goetz</label>
+								</li>
+								<li>
+									<input id="filter-murrays"  type="checkbox" name="murrays">
+									<label for="filter-murrays">Murray's</label>
+								</li>
+								<li>
+									<input id="filter-american-crew"  type="checkbox" name="american-crew" checked>
+									<label for="filter-american-crew">American Crew</label>
+								</li>
+							</ul>
+						</fieldset>
+						<fieldset>
+							<legend>Группы товаров:</legend>
+							<ul>
+								<li>
+									<input id="filter-shave" type="radio" name="product-group" value="shaving">
+									<label for="filter-shave">Бритвенные принадлежности</label>
+								</li>
+								<li>
+									<input id="filter-care" type="radio" name="product-group" value="hair-care" checked>
+									<label for="filter-care">Средства для ухода</label>
+								</li>
+								<li>
+									<input id="filter-accessories" type="radio" name="product-group" value="accessories">
+									<label for="filter-accessories">Бритвенные принадлежности</label>
+								</li>
+							</ul>
+						</fieldset>
+						<button class="button" type="submit">Показать</button>
+					</form>
+				</section>
+				<section class="catalog">
+					<h2 class="visually-hidden">Список средств для ухода</h2>
+					<ul class="catalog-list">
+						<li>
+							<a class="link" href="catalog-item.html">
+								<h3>
+									<span>Набор для путешествий</span>
+									<span>«Baxter of California»</span>
+								</h3>
+								<p>
+									<img src="img/product1.jpg" width="220" height="165" alt="Набор для путешествий «Baxter of California»">
+								</p>
+							</a>
+							<p>		
+								<b class="price">2 900 &#8381;</b>
+								<a class="button" href="">Купить</a>
 							</p>
-						</a>
-						<p>		
-							<b class="price">2 900 &#8381;</b>
-							<a class="button" href="">Купить</a>
-						</p>
-					</li>
-					<li>
-						<a class="link" href="catalog-item.html">
-							<h3>
-								<span>Увлажняющий кондиционер</span>
-								<span>«Baxter of California»</span>
-							</h3>
-							<p>
-								<img src="img/product2.jpg" width="220" height="165" alt="Увлажняющий кондиционер «Baxter of California»">
+						</li>
+						<li>
+							<a class="link" href="catalog-item.html">
+								<h3>
+									<span>Увлажняющий кондиционер</span>
+									<span>«Baxter of California»</span>
+								</h3>
+								<p>
+									<img src="img/product2.jpg" width="220" height="165" alt="Увлажняющий кондиционер «Baxter of California»">
+								</p>
+							</a>
+							<p>		
+								<b class="price">750 &#8381;</b>
+								<a class="button" href="">Купить</a>
 							</p>
-						</a>
-						<p>		
-							<b class="price">750 &#8381;</b>
-							<a class="button" href="">Купить</a>
-						</p>
-					</li>
-					<li>
-						<a class="link" href="catalog-item.html">
-							<h3>
-								<span>Гель для волос</span>
-								<span>«SUAVECITO»</span>
-							</h3>
-							<p>
-								<img src="img/product3.jpg" width="220" height="165" alt="Гель для волос «SUAVECITO»">
+						</li>
+						<li>
+							<a class="link" href="catalog-item.html">
+								<h3>
+									<span>Гель для волос</span>
+									<span>«SUAVECITO»</span>
+								</h3>
+								<p>
+									<img src="img/product3.jpg" width="220" height="165" alt="Гель для волос «SUAVECITO»">
+								</p>
+							</a>
+							<p>		
+								<b class="price">290 &#8381;</b>
+								<a class="button" href="">Купить</a>
 							</p>
-						</a>
-						<p>		
-							<b class="price">290 &#8381;</b>
-							<a class="button" href="">Купить</a>
-						</p>
-					</li>
-					<li>
-						<a class="link" href="catalog-item.html">
-							<h3>
-								<span>Глина для укладки волос</span>
-								<span>«American crew»</span>
-							</h3>
-							<p>
-								<img src="img/product4.jpg" width="220" height="165" alt="Глина для укладки волос «American crew»">
+						</li>
+						<li>
+							<a class="link" href="catalog-item.html">
+								<h3>
+									<span>Глина для укладки волос</span>
+									<span>«American crew»</span>
+								</h3>
+								<p>
+									<img src="img/product4.jpg" width="220" height="165" alt="Глина для укладки волос «American crew»">
+								</p>
+							</a>
+							<p>		
+								<b class="price">500 &#8381;</b>
+								<a class="button" href="">Купить</a>
 							</p>
-						</a>
-						<p>		
-							<b class="price">500 &#8381;</b>
-							<a class="button" href="">Купить</a>
-						</p>
-					</li>
-					<li>
-						<a class="link" href="catalog-item.html">
-							<h3>
-								<span>Гель для волос</span>
-								<span>«American crew»</span>
-							</h3>
-							<p>
-								<img src="img/product5.jpg" width="220" height="165" alt="Гель для волос «AMERICAN CREW»">
+						</li>
+						<li>
+							<a class="link" href="catalog-item.html">
+								<h3>
+									<span>Гель для волос</span>
+									<span>«American crew»</span>
+								</h3>
+								<p>
+									<img src="img/product5.jpg" width="220" height="165" alt="Гель для волос «AMERICAN CREW»">
+								</p>
+							</a>
+							<p>		
+								<b class="price">300 &#8381;</b>
+								<a class="button" href="">Купить</a>
 							</p>
-						</a>
-						<p>		
-							<b class="price">300 &#8381;</b>
-							<a class="button" href="">Купить</a>
-						</p>
-					</li>
-					<li>
-						<a class="link" href="catalog-item.html">
-							<h3>
-								<span>Набор для бритья</span>
-								<span>«Baxter of California»</span>
-							</h3>
-							<p>
-								<img src="img/product6.jpg" width="220" height="165" alt="Набор для бритья «Baxter of California»">
+						</li>
+						<li>
+							<a class="link" href="catalog-item.html">
+								<h3>
+									<span>Набор для бритья</span>
+									<span>«Baxter of California»</span>
+								</h3>
+								<p>
+									<img src="img/product6.jpg" width="220" height="165" alt="Набор для бритья «Baxter of California»">
+								</p>
+							</a>
+							<p>		
+								<b class="price">3 900 &#8381;</b>
+								<a class="button" href="">Купить</a>
 							</p>
-						</a>
-						<p>		
-							<b class="price">3 900 &#8381;</b>
-							<a class="button" href="">Купить</a>
-						</p>
-					</li>
-				</ul>
-				<ul class="pagination-list">
-					<li><a class="button" href="">1</a></li>
-					<li><a class="button current-page">2</a></li>
-					<li><a class="button" href="">3</a></li>
-					<li><a class="button" href="">4</a></li>
-				</ul>
-			</section>
+						</li>
+					</ul>
+					<ul class="pagination-list">
+						<li><a class="button" href="">1</a></li>
+						<li><a class="button current-page">2</a></li>
+						<li><a class="button" href="">3</a></li>
+						<li><a class="button" href="">4</a></li>
+					</ul>
+				</section>
+			</div>
 		</main>
 		<footer class="main-footer">
-			<p class="footer-contacts">
-				Барбершоп «Бородинский»<br>
-				Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
-				<a href="">Как нас найти?</a><br>
-				Телефон: +7 (495) 666-02-66
-			</p>
-			<div class="footer-social">
-				<p>Давайте дружить!</p>
-				<ul>
-					<li>
-						<a class="social-button" href="">Вконтакте</a>
-					</li>
-					<li>
-						<a class="social-button" href="">Фейсбук</a>
-					</li>
-					<li>
-						<a class="social-button" href="">Инстаграм</a>
-					</li>
-				</ul>
+			<div class="container">
+				<p class="footer-contacts">
+					Барбершоп «Бородинский»<br>
+					Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
+					<a href="">Как нас найти?</a><br>
+					Телефон: +7 (495) 666-02-66
+				</p>
+				<div class="footer-social">
+					<p>Давайте дружить!</p>
+					<ul>
+						<li>
+							<a class="social-button" href="">Вконтакте</a>
+						</li>
+						<li>
+							<a class="social-button" href="">Фейсбук</a>
+						</li>
+						<li>
+							<a class="social-button" href="">Инстаграм</a>
+						</li>
+					</ul>
+				</div>
+				<p class="footer-copyright">
+					Разработано:
+					<a class="button" href="https://htmlacademy.ru">HTML Academy</a>
+				</p>
 			</div>
-			<p class="footer-copyright">
-				Разработано:
-				<a class="button" href="https://htmlacademy.ru">HTML Academy</a>
-			</p>
 		</footer>
 	</body>
 </html>
