--- a/index.html
+++ b/index.html
@@ -8,33 +8,37 @@
 		<link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-		<header>
+		<header class="main-header">
 			<nav class="main-navigation">
-				<a>
+				<a class="main-header-logo">
 					<!--
 						Логотип является обозначающим для всего проекта.
 						Логотип — контентное изображение
 					-->
 					<img src="img/index-logo.svg" width="371" height="155" alt="Логотип барбешопа «Бородинский»">
 				</a>
-				<ul class="site-navigation">
-					<li><a href="">Информация</a></li>
-					<li><a href="">Новости</a></li>
-					<li><a href="">Прайс-лист</a></li>
-					<li><a href="catalog.html">Магазин</a></li>
-					<li><a href="">Контакты</a></li>
-				</ul>
-				<ul class="user-navigation">
-					<li>
-						<a href="">Вход</a>
-					</li>
-				</ul>
+				<div class="main-navigation-wrapper">
+					<div class="container">
+						<ul class="site-navigation">
+							<li><a href="">Информация</a></li>
+							<li><a href="">Новости</a></li>
+							<li><a href="">Прайс-лист</a></li>
+							<li><a href="catalog.html">Магазин</a></li>
+							<li><a href="">Контакты</a></li>
+						</ul>
+						<ul class="user-navigation">
+							<li>
+								<a href="">Вход</a>
+							</li>
+						</ul>
+					</div>
+				</div>
 			</nav>
 		</header>
-		<main>
+		<main class="container">
 			<!-- Добавим описание содержания всей страницы — это тег h1 -->
 			<h1 class="visually-hidden">Барбершоп «Бородинский»</h1>
-			<section>
+			<section class="features">
 				<h2 class="visually-hidden">Преимущества нашего барбешопа</h2>
 				<ul class="features-list">
 					<li class="feature-item">
@@ -52,7 +56,7 @@
 				</ul>
 			</section>
 			<div class="index-columns">
-				<section>
+				<section class="news">
 					<h2>Новости</h2>
 					<ul class="news-list">
 						<li class="news-item">
@@ -66,7 +70,7 @@
 					</ul>
 					<a class="button" href="">Все новости</a>
 				</section>
-				<section>
+				<section class="gallery">
 					<h2>Фотогалерея</h2>
 					<figure class="gallery-content">
 						<a href="">
@@ -78,7 +82,7 @@
 				</section>
 			</div>
 			<div class="index-columns">
-				<section>
+				<section class="contacts">
 					<h2>Контактная информация</h2>
 					<p>
 						Барбершоп «Бородинский»<br>
@@ -93,7 +97,7 @@
 					<a class="button" href="">Как проехать</a>
 					<a class="button" href="">Обратная связь</a>
 				</section>
-				<section>
+				<section class="appointment">
 					<h2>Записаться</h2>
 					<p>Укажите желаемую дату и время и мы свяжемся с вами для подтверждения брони</p>
 					<form action="" method="post">
@@ -113,11 +117,13 @@
 							<label for="appointment-phone">Телефон</label>
 							<input id="appointment-phone" type="tel" name="phone" value="" placeholder="+7 123 456-78-90">	
 						</p>
-						<button type="submit">Отправить</button>
+						<button class="button" type="submit">Отправить</button>
 					</form>
 				</section>
 			</div>
-			<footer class="main-footer">
+		</main>
+		<footer class="main-footer">
+			<div class="container">
 				<p class="footer-contacts">
 					Барбершоп «Бородинский»<br>
 					Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
@@ -142,36 +148,36 @@
 					Разработано:
 					<a class="button" href="https://htmlacademy.ru">HTML Academy</a>
 				</p>
-			</footer>
-			<!-- ПОПАПЫ -->
-			<section class="modal">
-				<h2>Личный кабинет</h2>
-				<p>Введите пожалуйста свой логин и пароль</p>
-				<form class="login-form" action="" method="post">
-					<p>
-						<label for="user-login">Логин</label>
-						<input id="user-login" type="text" name="login" value="" placeholder="email@example.com">		
-					</p>
-					<p>
-						<label for="user-password">Пароль</label>
-						<input id="user-password" type="password" name="password" value="" placeholder="••••••••">
-					</p>
-					<p>
-						<input id="login-password-info" type="checkbox" name="remember" checked>
-						<label class="login-checkbox" for="login-password-info">Запомните меня</label>	
-						<a class="restore" href="">Я забыл пароль!</a>
-					</p>
-					<button class="button" type="submit">Войти</button>
-				</form>
-				<button type="button">Закрыть</button>
-			</section>
-			<section class="modal">
-				<h2 class="visually-hidden">Как до нас добраться</h2>
+			</div>
+		</footer>
+		<!-- ПОПАПЫ -->
+		<section class="modal">
+			<h2>Личный кабинет</h2>
+			<p>Введите пожалуйста свой логин и пароль</p>
+			<form class="login-form" action="" method="post">
 				<p>
-					<img src="img/map.jpg" width="766" height="560" alt="Офис компании по адресу: ул. Большая Конюшенная 19/8, Санкт-Петербург">
+					<label for="user-login">Логин</label>
+					<input id="user-login" type="text" name="login" value="" placeholder="email@example.com">		
 				</p>
-				<button type="button">Закрыть</button>
-			</section>
-		</main>
+				<p>
+					<label for="user-password">Пароль</label>
+					<input id="user-password" type="password" name="password" value="" placeholder="••••••••">
+				</p>
+				<p>
+					<input id="login-password-info" type="checkbox" name="remember" checked>
+					<label class="login-checkbox" for="login-password-info">Запомните меня</label>	
+					<a class="restore" href="">Я забыл пароль!</a>
+				</p>
+				<button class="button" type="submit">Войти</button>
+			</form>
+			<button type="button">Закрыть</button>
+		</section>
+		<section class="modal">
+			<h2 class="visually-hidden">Как до нас добраться</h2>
+			<p>
+				<img src="img/map.jpg" width="766" height="560" alt="Офис компании по адресу: ул. Большая Конюшенная 19/8, Санкт-Петербург">
+			</p>
+			<button type="button">Закрыть</button>
+		</section>
   </body>
 </html>
